--- a/src/marqo/core/semi_structured_vespa_index/semi_structured_vespa_schema_template.sd.jinja2
+++ b/src/marqo/core/semi_structured_vespa_index/semi_structured_vespa_schema_template.sd.jinja2
@@ -39,21 +39,6 @@ schema {{ index.schema_name }} {
                                rank: filter }
         }
 
-        {# All int and float fields will be added score modifiers -#}
-        field marqo__score_modifiers type tensor<double>(p{}) {
-            indexing: attribute | summary
-        }
-
-        {# TODO START replace with each lexical field #}
-        field marqo__strings type array<string>{
-            indexing: index
-            index: enable-bm25
-        }
-
-        field marqo__long_string_fields type map<string, string> {
-            indexing: summary
-        }
-
         field marqo__short_string_fields type map<string, string> {
             indexing: summary
             struct-field key { indexing : attribute
@@ -69,12 +54,36 @@ schema {{ index.schema_name }} {
             attribute: fast-search
             rank: filter
         }
-        {# TODO END replace with each lexical field #}
 
-        {# TODO replace with each multimodal_combination field? #}
-        field marqo__multimodal_params type map<string, string> {
+        {# All int and float fields will be added score modifiers -#}
+        field marqo__score_modifiers type tensor<double>(p{}) {
+            indexing: attribute | summary
+        }
+
+        {% for lexical_field in index.lexical_field_map.values() -%}
+        field {{ lexical_field.lexical_field_name }} type string {
+            indexing: index | summary
+            index: enable-bm25
+        }
+        {% endfor -%}
+
+        {% for multimodal_field in index.field_map_by_type['multimodal_combination'] -%}
+        field {{ multimodal_field.name }} type map<string, float> {
             indexing: summary
         }
+        {% endfor -%}
+
+        {% for custom_vector_field in index.field_map_by_type['custom_vector'] -%}
+        field {{ custom_vector_field.name }} type string {
+            indexing: summary
+        }
+        {% endfor -%}
+
+        {% for image_field in index.field_map_by_type['image_pointer'] -%}
+        field {{ image_field.name }} type string {
+            indexing: summary
+        }
+        {% endfor -%}
 
         {% for field in index.tensor_fields -%}
         field {{ field.chunk_field_name }} type array<string> {
@@ -100,15 +109,20 @@ schema {{ index.schema_name }} {
         }
     }
 
+    {% if index.lexical_field_map -%}
     fieldset default {
-        fields: marqo__strings
+        fields: {{ ", ".join(index.lexical_field_map.keys()) }}
     }
+    {% endif -%}
 
     rank-profile base_rank_profile inherits default {
         inputs {
-            {%- for field in index.tensor_fields %}
+            {% for lexical_field in index.lexical_field_map.values() -%}
+            query({{ lexical_field.lexical_field_name }}): 0
+            {% endfor -%}
+            {% for field in index.tensor_fields -%}
             query({{ field.embeddings_field_name }}): 0
-            {%- endfor %}
+            {% endfor -%}
             query(marqo__query_embedding) tensor<float>(x[{{ dimension }}])
             query(marqo__mult_weights_lexical) tensor<double>(p{})
             query(marqo__add_weights_lexical) tensor<double>(p{})
@@ -120,8 +134,24 @@ schema {{ index.schema_name }} {
             expression: if (count(mult_weights * attribute(marqo__score_modifiers)) == 0,   1, reduce(mult_weights * attribute(marqo__score_modifiers), prod)) * score + reduce(add_weights * attribute(marqo__score_modifiers), sum)
         }
 
+        {% macro max_lexical_score(fields) -%}
+            {%- set length = fields|length -%}
+            {%- if length == 0 -%}
+                0
+            {%- elif length == 1 -%}
+                {%- set field = fields[0] -%}
+                if(query({{ field.lexical_field_name }}) > 0, bm25({{ field.lexical_field_name }}), 0)
+            {%- else -%}
+                max({{ max_lexical_score(fields[0:1]) }}, {{ max_lexical_score(fields[1:]) }})
+            {%- endif -%}
+        {%- endmacro %}
+
+        function lexical_score_max() {
+            expression: {{ max_lexical_score(index.lexical_field_map|values_to_list) }}
+        }
+
         function lexical_score() {
-            expression: bm25(marqo__strings)
+            expression: lexical_score_max()
         }
 
         {% macro max_embedding_score(fields) -%}
@@ -188,13 +218,17 @@ schema {{ index.schema_name }} {
 
     document-summary all-non-vector-summary {
         summary marqo__id type string {}
-        summary marqo__strings type array<string> {}
-        summary marqo__long_string_fields type map<string, string> {}
         summary marqo__short_string_fields type map<string, string> {}
         summary marqo__string_array type array<string> {}
         summary marqo__bool_fields type map<string, byte> {}
         summary marqo__int_fields type map<string, long> {}
         summary marqo__float_fields type map<string, double> {}
+        {% for lexical_field in index.lexical_field_map.values() -%}
+        summary {{ lexical_field.name }} type string {source: {{ lexical_field.lexical_field_name }}}
+        {%- endfor %}
+        {%- for image_field in index.field_map_by_type['image_pointer'] %}
+        summary {{ image_field.name }} type string {}
+        {%- endfor %}
         {%- for field in index.tensor_fields %}
         summary {{ field.chunk_field_name }} type array<string> {}
         {%- endfor %}
@@ -202,16 +236,23 @@ schema {{ index.schema_name }} {
 
     document-summary all-vector-summary {
         summary marqo__id type string {}
-        summary marqo__strings type array<string> {}
-        summary marqo__long_string_fields type map<string, string> {}
         summary marqo__short_string_fields type map<string, string> {}
         summary marqo__string_array type array<string> {}
         summary marqo__bool_fields type map<string, byte> {}
         summary marqo__int_fields type map<string, long> {}
         summary marqo__float_fields type map<string, double> {}
+        {% for lexical_field in index.lexical_field_map.values() -%}
+        summary {{ lexical_field.name }} type string {source: {{ lexical_field.lexical_field_name }}}
+        {%- endfor %}
+        {%- for image_field in index.field_map_by_type['image_pointer'] %}
+        summary {{ image_field.name }} type string {}
+        {%- endfor %}
         {%- for field in index.tensor_fields %}
         summary {{ field.chunk_field_name }} type array<string> {}
         summary {{ field.embeddings_field_name }} type tensor<float>(p{}, x[{{ dimension }}]) {}
+        {%- endfor %}
+        {%- for multimodal_field in index.field_map_by_type['multimodal_combination'] %}
+        summary {{ multimodal_field.name }} type map<string, float> {}
         {%- endfor %}
     }
 }
